...
    <string name="activity_articles_label">Articles</string>

    <!-- Toolbar actions -->
    <string name="action_sorting_title">Sort</string>

    <!-- NavigationDrawer and NavigationView -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_view_header_label">News App with MVP</string>

    <string name="navigation_view_group_category_label">Category</string>
    <string name="navigation_view_group_language_label">Language</string>
    <string name="navigation_view_group_country_label">Country</string>
...
    <string name="navigation_view_category_entertainment">Entertainment</string>
    <string name="navigation_view_category_gaming">Gaming</string>
    <string name="navigation_view_category_general">General</string>
    <string name="navigation_view_category_music">Music</string>
    <string name="navigation_view_category_politics">Politics</string>
    <string name="navigation_view_category_science_and_nature">Science and nature</string>
    <string name="navigation_view_category_sport">Sport</string>
    <string name="navigation_view_category_technology">Technology</string>

    <string name="navigation_view_language_all">All</string>
    <string name="navigation_view_language_en">English</string>
    <string name="navigation_view_language_de">German</string>
    <string name="navigation_view_language_fr">French</string>
...
